--- a/app/views/concerto_emergency_broadcast/alerts/new.html.erb
+++ b/app/views/concerto_emergency_broadcast/alerts/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New alert</h1>
+<section class="viewblock">
+  <header class="viewblock-header">
+    <div class="viewblock-header_right">
+      <div class="button-padding">
+        <%= link_to 'Back', alerts_path, :class => 'btn' %>
+      </div>
+    </div>
+    <h1 class="default-padding">New Emegency Broadcast Alert</h1>
+  </header>
+  <div class="viewblock-cont">
+    <%= render 'form' %>
+  </div>
+</section>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', alerts_path %>
+
