--- a/app/views/concerto_emergency_broadcast/alerts/_form.html.erb
+++ b/app/views/concerto_emergency_broadcast/alerts/_form.html.erb
@@ -1,21 +1,16 @@
 <%= form_for(@alert) do |f| %>
-  <% if @alert.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@alert.errors.count, "error") %> prohibited this alert from being saved:</h2>
+  <%= render :partial => "layouts/errors", :object => @alert %>
 
-      <ul>
-      <% @alert.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+  <fieldset>
+    <div class="clearfix">
+      <%= f.label :body, "Message" %><br>
+      <div class="input">
+        <%= f.text_field :body %>
+      </div>
     </div>
-  <% end %>
+  </fieldset>
 
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_field :body %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="submit_bar actions">
+    <%= f.submit :class => 'btn btn-primary' %>
   </div>
 <% end %>
