--- a/app/views/concerto_emergency_broadcast/alerts/_form.html.erb
+++ b/app/views/concerto_emergency_broadcast/alerts/_form.html.erb
@@ -5,7 +5,7 @@
     <div class="clearfix">
       <%= f.label :body, "Message" %><br>
       <div class="input">
-        <%= f.text_field :body %>
+        <%= f.text_area :body %>
       </div>
     </div>
   </fieldset>
